# OldSchoolProjects

./: .gitignore  README.md
CMPUT 379/CMPUT379A2/: .gitignore  DESIGN.md  Makefile  README.md  UI.md  gameclient379.c  gameserver379.c  player.c  player.h
CMPUT 379/CMPUT379A3/: .gitignore  DESIGN.md  Makefile  README.md  heapsort.c  runme.sh  testLoopProgram.c  valws379.c
ECE 340 Labs/ECE340Lab1/: Lab1 Report.odt  Lab1A.m  Lab1B.m  Lab1C.m  Lab1D.m  sysresp.m
ECE 340 Labs/ECE340Lab2/: Lab2 Report.docx  Lab2 Report.odt  Lab2A.m  Lab2B.m  Lab2C.m  Lab2D.m  barbaraImageComparison.fig  test3.m
ECE 340 Labs/ECE340Lab3/: LICENSE  Lab3 Report.odt  Lab3A.m  Lab3B.m  ~$b3 Report.odt
ECE 340 Labs/ECE340Lab4/: 2DpowerSpectrum.fig  Lab4 Report.odt  Lab4A.m  Q4.m
ECE 340 Labs/ECE340Lab5/: Lab5A.m  Lab5B.m  Lab5C.m  Lab5D.m  Lab5Q4.m  plot.tiff  plot1.tiff
ECE 421/ECE-421-Project2/: Makefile  README.md  assignment2_main.rb  flicks-x64-mingw32.def  flicks.h  flicks.i  flicks_wrap.cxx  gen_makefile.rb  monitor.rb  monitor_driver.rb  part2_driver.rb  process.rb  ruby_shell.rb  tools.rb
ECE420Lab-1/: .gitignore
ECE420Lab-1/Lab2/: CMakeLists.txt  Makefile  ReadMe  Timings.xlsx  common.c  common.h  globalMutexTimings  globalRWTimings  lockedMsgArray.h  lockedMsgGlobalMutexImpl.c  lockedMsgGlobalRWLockImpl.c  lockedMsgMultiMutexImpl.c  lockedMsgMultiRWLockImpl.c  main.c  members  multiMutexTimings  multiRWTimings  server_output_time_aggregated
ECE420Lab-1/Lab4/: CMakeLists.txt  Lab4_IO.h  Makefile  ReadMe  Timings.xlsx  hosts  main.c  runtenloops.sh
(+147 files in other folders)
